--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PORT='8000'
+PORT='https://movies-backend-t01n.onrender.com/'
 DB_NAME='Moviecollection'
 MONGODB_URL='mongodb+srv://santhoshg059:admin059@cluster0.uesuzwj.mongodb.net/Moviecollection'
 
